prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__set_ops_remove.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# mssql:test\nlet distinct = rel -> (from t = _param.rel | group {t.*} (take 1))\n\nfrom_text format:json '{ \"columns\": [\"a\"], \"data\": [[1], [2], [2], [3]] }'\ndistinct\nremove (from_text format:json '{ \"columns\": [\"a\"], \"data\": [[1], [2]] }')\nsort a\n"
input_file: prqlc/prqlc/tests/integration/queries/set_ops_remove.prql
---
frames:
- - 1:71-77
  - columns:
    - !Single
      name:
      - t
      - a
      target_id: 141
      target_name: null
    inputs:
    - id: 132
      name: t
      table:
      - default_db
      - _literal_132
- - 0:3163-3240
  - columns:
    - !Single
      name:
      - t
      - a
      target_id: 141
      target_name: null
    - !Single
      name:
      - b
      - a
      target_id: 127
      target_name: a
    inputs:
    - id: 132
      name: t
      table:
      - default_db
      - _literal_132
    - id: 127
      name: b
      table:
      - default_db
      - _literal_127
- - 0:3243-3288
  - columns:
    - !Single
      name:
      - t
      - a
      target_id: 141
      target_name: null
    - !Single
      name:
      - b
      - a
      target_id: 127
      target_name: a
    inputs:
    - id: 132
      name: t
      table:
      - default_db
      - _literal_132
    - id: 127
      name: b
      table:
      - default_db
      - _literal_127
- - 1:165-238
  - columns:
    - !Single
      name:
      - t
      - a
      target_id: 212
      target_name: null
    inputs:
    - id: 132
      name: t
      table:
      - default_db
      - _literal_132
    - id: 127
      name: b
      table:
      - default_db
      - _literal_127
- - 1:239-245
  - columns:
    - !Single
      name:
      - t
      - a
      target_id: 212
      target_name: null
    inputs:
    - id: 132
      name: t
      table:
      - default_db
      - _literal_132
    - id: 127
      name: b
      table:
      - default_db
      - _literal_127
nodes:
- id: 127
  kind: Array
  span: 1:173-237
  parent: 194
- id: 132
  kind: Array
  span: 1:36-55
  parent: 159
- id: 141
  kind: Ident
  ident: !Ident
  - this
  - t
  - a
  targets:
  - 132
  parent: 143
- id: 143
  kind: Tuple
  span: 1:64-69
  children:
  - 141
- id: 159
  kind: 'TransformCall: Take'
  span: 1:71-77
  children:
  - 132
  - 160
  parent: 194
- id: 160
  kind: Literal
  parent: 159
- id: 183
  kind: Ident
  ident: !Ident
  - this
  - t
  - a
  targets:
  - 141
- id: 186
  kind: Ident
  ident: !Ident
  - that
  - b
  - a
  targets:
  - 127
- id: 192
  kind: RqOperator
  span: 0:3192-3239
  targets:
  - 183
  - 186
  parent: 194
- id: 194
  kind: 'TransformCall: Join'
  span: 0:3163-3240
  children:
  - 159
  - 127
  - 192
  parent: 210
- id: 202
  kind: Ident
  span: 0:6196-6204
  ident: !Ident
  - this
  - b
  - a
  targets:
  - 127
- id: 206
  kind: RqOperator
  span: 0:3251-3287
  targets:
  - 202
  - 209
  parent: 210
- id: 209
  kind: Literal
  span: 0:6208-6212
- id: 210
  kind: 'TransformCall: Filter'
  span: 0:3243-3288
  children:
  - 194
  - 206
  parent: 214
- id: 212
  kind: Ident
  ident: !Ident
  - this
  - t
  - a
  targets:
  - 141
  parent: 213
- id: 213
  kind: Tuple
  span: 0:3298-3301
  children:
  - 212
  parent: 214
- id: 214
  kind: 'TransformCall: Select'
  span: 1:165-238
  children:
  - 210
  - 213
  parent: 217
- id: 215
  kind: Ident
  span: 1:244-245
  ident: !Ident
  - this
  - t
  - a
  targets:
  - 212
  parent: 217
- id: 217
  kind: 'TransformCall: Sort'
  span: 1:239-245
  children:
  - 214
  - 215
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Let
      name: distinct
      value:
        Func:
          return_ty: null
          body:
            Pipeline:
              exprs:
              - FuncCall:
                  name:
                    Ident:
                    - from
                    span: 1:36-40
                  args:
                  - Ident:
                    - _param
                    - rel
                    span: 1:45-55
                    alias: t
                span: 1:36-55
              - FuncCall:
                  name:
                    Ident:
                    - group
                    span: 1:58-63
                  args:
                  - Tuple:
                    - Ident:
                      - t
                      - '*'
                      span: 1:65-68
                    span: 1:64-69
                  - FuncCall:
                      name:
                        Ident:
                        - take
                        span: 1:71-75
                      args:
                      - Literal:
                          Integer: 1
                        span: 1:76-77
                    span: 1:71-77
                span: 1:58-78
            span: 1:35-79
          params:
          - name: rel
            default_value: null
          named_params: []
        span: 1:28-79
    span: 1:0-79
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from_text
                span: 1:81-90
              args:
              - Literal:
                  String: '{ "columns": ["a"], "data": [[1], [2], [2], [3]] }'
                span: 1:103-155
              named_args:
                format:
                  Ident:
                  - json
                  span: 1:98-102
            span: 1:81-155
          - Ident:
            - distinct
            span: 1:156-164
          - FuncCall:
              name:
                Ident:
                - remove
                span: 1:165-171
              args:
              - FuncCall:
                  name:
                    Ident:
                    - from_text
                    span: 1:173-182
                  args:
                  - Literal:
                      String: '{ "columns": ["a"], "data": [[1], [2]] }'
                    span: 1:195-237
                  named_args:
                    format:
                      Ident:
                      - json
                      span: 1:190-194
                span: 1:173-237
            span: 1:165-238
          - FuncCall:
              name:
                Ident:
                - sort
                span: 1:239-243
              args:
              - Ident:
                - a
                span: 1:244-245
            span: 1:239-245
        span: 1:81-245
    span: 1:79-245
